# pyladies-seoul

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.prod  LICENSE  README.md  babel.config.js  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.yml  nginx.conf  package-lock.json  package.json  pyproject.toml  setup_dev.py
.claude/.claude/commands/: architecture_design_agent.md  code_review_agent.md  implementation_agent.md  software_architect_agent.md  task_breakdown_agent.md  test_writing_guidelines.md
.claude/agents/: fullstack-tdd-developer.md  project-manager.md
.claude/commands/: architecture_design_agent.md  detailed_planning_agent.md  implementation_agent.md  problem_analysis_agent.md  test_code_guide.md
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml
apps/: __init__.py
apps/common/: apps.py  context_processors.py  decorators.py  middleware.py  models.py  utils.py
apps/content/: admin.py  apps.py  models.py  urls.py  views.py  wagtail_hooks.py
apps/content/management/commands/: setup_contribute_methods.py  setup_homepage.py
apps/content/migrations/: 0001_initial.py  0002_contributemethod_contributemethodsnippet.py  0003_faq_faqsnippet.py  0004_member_intro.py
apps/content/templatetags/: content_tags.py
config/: __init__.py  api_urls.py  asgi.py  logfire_config.py  settings.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  development.py  production.py  staging.py  testing.py
docker/apm/: apm-server.yml
docker/nginx/: Dockerfile.prod  default.conf  entrypoint.sh  nginx.conf  rate_limiting.conf  security.conf  ssl.conf  staging.conf
docker/nginx/conf.d/: production.conf
docker/postgres/: init.sql  postgresql.conf
docker/promtail/: promtail.yml
docker/redis/: redis.conf
docs/: DEPLOYMENT_RUNBOOK.md  DISASTER_RECOVERY.md  IMAGE_MANAGEMENT.md  IMAGE_QUICK_GUIDE.md  README.md
locale/en/LC_MESSAGES/: django.po
locale/ko/LC_MESSAGES/: django.po
main/: views.py
scripts/: backup.sh  deploy.sh  health-check.sh  migrate.sh  restore.sh  rollback.sh  setup-secrets.sh  setup-ssl.sh
static/css/: animations.css  base.css  components.css  icons.css  main.css  navigation.css  responsive.css  social-icons.css  theme-switch.css  variables.css
static/css/pages/: about.css  connect.css  members.css
static/js/: connect_page.js  contact.js  contact_success.js  content_page.js  member_detail.js  member_list.js  theme_switcher.js
templates/: base.html  coc.html  contribute.html  event_detail.html  events_list.html  faq.html  health_check.html  index.html
templates/blocks/: quote_block.html
templates/components/: README.md  breadcrumb.html  contact_section.html  content_grid.html  content_grid_items.html  content_meta.html  content_type_badge.html  contribute_card.html  cta_section.html  event_card.html  event_info_alert.html  faq_accordion.html  form_field.html  interview_info.html  member_avatar.html  member_badge.html  organizer_card.html  page_header.html  search_form.html  search_result_card.html  search_tips.html  sidebar.html  social_links.html  social_links_grid.html  social_share_buttons.html  stat_card.html  tags.html
templates/content/: about_page.html  category_page.html  connect_page.html  contact.html  contact_success.html  content_page.html  home_page.html  member_detail.html  member_grid_items.html  member_list.html  search.html
tests/: __init__.py  test_settings.py
tests/admin_tests/: base.py  test_custom_forms.py  test_image_management.py  test_multilingual.py  test_permissions.py
